--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
 									</span>
 									<a href="laas.html">
 										<div class="content">
+											<!-- keep a record
 											<h2>Los Angeles Animal Services</h2>
-											<p>Branding, Graphic Design, UI</p>
+											-->
 										</div>
 									</a>
 								</article>
@@ -64,8 +65,9 @@
 									</span>
 									<a href="glue-design-reel.html">
 										<div class="content">
+											<!-- keep a record
 											<h2>Glue Design Reel 2021</h2>
-											<p>Motion Design, Graphic Design</p>
+											-->
 										</div>
 									</a>
 								</article>
@@ -75,8 +77,9 @@
 									</span>
 									<a href="coconut-palm.html">
 										<div class="content">
+											<!-- keep a record
 											<h2>Coconut Palm</h2>
-											<p>Branding, Art Direction, Graphic Design</p>
+											-->
 										</div>
 									</a>
 								</article>
@@ -86,8 +89,9 @@
 									</span>
 									<a href="boba.html">
 										<div class="content">
+											<!-- keep a record
 											<h2>BOBA / OMGX</h2>
-											<p>Branding, Logo Design</p>
+											-->
 										</div>
 									</a>
 								</article>
@@ -97,8 +101,9 @@
 									</span>
 									<a href="wave.html">
 										<div class="content">
+											<!-- keep a record
 											<h2>WAVE Record label</h2>
-											<p>Branding, Graphic Design</p>
+											-->
 										</div>
 									</a>
 								</article>
@@ -108,8 +113,9 @@
 									</span>
 									<a href="made-in-chengdu.html">
 										<div class="content">
+											<!-- keep a record
 											<h2>Made in Chengdu</h2>
-											<p>Editorial, Graphic Design</p>
+											-->
 										</div>
 									</a>
 								</article>
@@ -119,8 +125,9 @@
 									</span>
 									<a href="scnr.html">
 										<div class="content">
+											<!-- keep a record
 											<h2>SCNR</h2>
-											<p>Motion Graphics, Graphic Design, Art Direction</p>
+											-->
 										</div>
 									</a>
 								</article>
@@ -130,8 +137,9 @@
 									</span>
 									<a href="ifwf.html">
 										<div class="content">
+											<!-- keep a record
 											<h2>International Foundation for World Freedom</h2>
-											<p>Branding, Graphic Design</p>
+											-->
 										</div>
 									</a>
 								</article>
@@ -141,8 +149,9 @@
 									</span>
 									<a href="personal-arts.html">
 										<div class="content">
+											<!-- keep a record
 											<h2>Personal Arts</h2>
-											<p>Art</p>
+											-->
 										</div>
 									</a>
 								</article>
