--- a/laas.html
+++ b/laas.html
@@ -69,6 +69,22 @@
 								</div>
 							</div>
 							<br>
+							<h2>Design system</h2>
+							<div class="imgrow">
+								<div class="imgcolumn">
+									<img src="images/laas/UI-1.jpg" style="width:100%">
+								</div>
+								<div class="imgcolumn">
+									<img src="images/laas/UI-2.jpg" style="width:100%">
+								</div>
+								<div class="imgcolumn">
+									<img src="images/laas/UI-3.jpg" style="width:100%">
+								</div>
+								<div class="imgcolumn">
+									<img src="images/laas/UI-4.jpg" style="width:100%">
+								</div>
+							</div>
+							<br>
 							<br>
 							<h2>Social media campaign</h2>
 							<span class="image main"><img src="images/laas/social.jpeg" alt="social media posts" /></span>
@@ -88,6 +104,7 @@
 							<br>
 							<br>
 							<h2>Photoshoot for LA Animal Services</h2>
+							<p>Throughout an extensive multi-day photoshoot, we successfully captured the very essence of what shelter pets bring to the table, creating an expansive archive of thousands of images for years to come.</p>
 							<div class="imgrow">
 								<div class="imgcolumn">
 									<img src="images/laas/photo-1.jpeg" style="width:100%">
@@ -110,21 +127,6 @@
 							</div>
 							<br>
 							<br>
-							<h2>Design system</h2>
-							<div class="imgrow">
-								<div class="imgcolumn">
-									<img src="images/laas/UI-1.jpg" style="width:100%">
-								</div>
-								<div class="imgcolumn">
-									<img src="images/laas/UI-2.jpg" style="width:100%">
-								</div>
-								<div class="imgcolumn">
-									<img src="images/laas/UI-3.jpg" style="width:100%">
-								</div>
-								<div class="imgcolumn">
-									<img src="images/laas/UI-4.jpg" style="width:100%">
-								</div>
-							</div>
 							<br>
 							<br>
 							<span class="image main"><img src="images/laas/logomark_white.jpg" alt="logo mark white" /></span>
