--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<span class="image">
 										<img src="images/glue/cover.jpg" alt="glue logo" />
 									</span>
-									<a href="glue-design-reel.html">
+									<a href="the-glue.html">
 										<div class="content">
 											<!-- keep a record
 											<h2>Glue Design Reel 2021</h2>
