--- a/the-glue.html
+++ b/the-glue.html
@@ -74,7 +74,7 @@
 							<br>
 							<br>
 							<h2>Marketing materials</h2>
-							<p>I created a series of social media animations to embrace and celebrate the new brand identity</p>
+							<p>I created a series of social media animations to embrace and celebrate the new brand identity.</p>
 							<div class="imgrow">
 								<div class="imgcolumn">
 									<div style="padding:125% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/866901059?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="What_watching"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
