--- a/index.html
+++ b/index.html
@@ -83,9 +83,21 @@
 										</div>
 									</a>
 								</article>
+									<article class="style1">
+									<span class="image">
+										<img src="images/lyft/cover.jpg" alt="lyft logo" />
+									</span>
+									<a href="slow-first-ride.html">
+										<div class="content">
+											<!-- keep a record
+											<h2>Slow first ride/h2>
+											-->
+										</div>
+									</a>
+								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/boba/cover.jpg" alt="" />
+										<img src="images/boba/cover.jpg" alt="boba logo" />
 									</span>
 									<a href="boba.html">
 										<div class="content">
