--- a/index.html
+++ b/index.html
@@ -85,6 +85,18 @@
 								</article>
 									<article class="style1">
 									<span class="image">
+										<img src="images/cisco/cover.jpg" alt="cisco" />
+									</span>
+									<a href="motion-graphic-video-editing.html">
+										<div class="content">
+											<!-- keep a record
+											Cisco motion graphics and video editing</h2>
+											-->
+										</div>
+									</a>
+								</article>
+									<article class="style1">
+									<span class="image">
 										<img src="images/lyft/cover.jpg" alt="lyft logo" />
 									</span>
 									<a href="slow-first-ride.html">
