--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
+										<img src="images/F&F/cover.jpg" alt="F&F cover" />
+									</span>
+									<a href="educational-brochure.html">
+										<div class="content">
+											<!-- keep a record
+											<h2>Foundations and Futures Educational Brochure</h2>
+											-->
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
 										<img src="images/laas/cover.jpg" alt="laas logo" />
 									</span>
 									<a href="laas.html">
