--- a/slow-first-ride.html
+++ b/slow-first-ride.html
@@ -36,7 +36,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="cv/cv2023.pdf" target="_blank">CV</a></li>
+							<li><a href="cv/Wei_2025.pdf" target="_blank">CV</a></li>
 						</ul>
 					</nav>
 
