--- a/educational-brochure.html
+++ b/educational-brochure.html
@@ -50,7 +50,7 @@
 							<p>
 							Ahead of its official launch in Summer 2025, this guide provides an at-a-glance overview of Asian American and Pacific Islander studies, highlighting some of the key concepts, important moments, and historical figures featured in the textbook. You'll also get a sneak peek at the textbook's unreleased Table of Contents and new insight into Foundations and Futures' project approach.</p>
 							<p>
-							As the graphic designer of the brochure, I played a key role in shaping its vision and style, ensuring the message is communicated in an effective and appealing wau. I collaborate closely with editors and researchers, transforming their ideas and content into visually compelling designs that captivate the audience. From layout to typography, every detail is crafted to bring the content to life, blending creativity with functionality to create a seamless and impactful presentation.	
+							As the graphic designer of the brochure, I played a key role in shaping its vision and style, ensuring the message is communicated in an effective and appealing way. I collaborate closely with editors and researchers, transforming their ideas and content into visually compelling designs that captivate the audience. From layout to typography, every detail is crafted to bring the content to life, blending creativity with functionality to create a seamless and impactful presentation.	
 							</p>
 							<span class="image main"><img src="images/F&F/header.jpg" alt="header" /></span>
 							<br>
