--- a/made-in-chengdu.html
+++ b/made-in-chengdu.html
@@ -82,6 +82,9 @@
 									<img src="images/madeinchengdu/page-10.jpeg" style="width:100%">
 								</div>
 							</div>
+							<br>
+							<br>
+                            <iframe allowfullscreen="" scrolling="no" class="fp-iframe" style="border: 1px solid lightgray; width: 100%; height: 600px;" src="https://heyzine.com/flip-book/7755c0c4ab.html"></iframe>
 						</div>
 					</div>
 
