--- a/laas.html
+++ b/laas.html
@@ -45,8 +45,8 @@
 						<div class="inner">
 							<h1>Los Angeles Animal Services</h1>
 							<h2>(with The Glue)</h2>
-							<p>It was an honor to work on an already recognizable iconic LA brand and give it life once again. We call our concept “Animal Forward.”</p>
-							<span class="image main"><img src="images/laas/header.gif" alt="header" /></span>
+							<p>It was an honor to work on an already recognizable iconic LA brand and give it life once again. Based on a deep understanding of the agency and its constituents, we created a new brand called “Animal Forward.”</p>
+							<span class="image main"><img src="images/laas/logomark_white.jpg" alt="logo mark white" /></span>
 							<br>
 							<br>
 							<h2>Website redesign</h2>
@@ -129,7 +129,7 @@
 							<br>
 							<br>
 							<br>
-							<span class="image main"><img src="images/laas/logomark_white.jpg" alt="logo mark white" /></span>
+							<span class="image main"><img src="images/laas/header.gif" alt="header" /></span>
 						</div>
 					</div>
 
